[gd_scene load_steps=9 format=3 uid="uid://dwho6t7nrxytv"]

[ext_resource type="Script" path="res://Nova pasta/title_screen.gd" id="1_xki1r"]
[ext_resource type="Texture2D" uid="uid://bxufg1vf21dpk" path="res://assets/Mini FX, Items & UI/title-screen.jpg" id="2_d1ben"]
[ext_resource type="Texture2D" uid="uid://cxatf2isxshh1" path="res://assets/Sprite Pack 7/HatchfulExport-All/logo.png" id="2_kwakj"]
[ext_resource type="Theme" uid="uid://cgng4tspg8dfi" path="res://Nova pasta/new_theme.tres" id="3_tr1c5"]
[ext_resource type="Texture2D" uid="uid://bdan6vbcsukb2" path="res://assets/Sprite Pack 7/3 - Gordon/Standing (48 x 48).png" id="5_wiuwm"]

[sub_resource type="Animation" id="Animation_cqget"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n6nq2"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-350, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buwmb"]
_data = {
"RESET": SubResource("Animation_cqget"),
"reveal": SubResource("Animation_n6nq2")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xki1r")
metadata/_edit_use_anchors_ = true

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d1ben")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="game_logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_kwakj")
expand_mode = 4

[node name="start_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tr1c5")
text = "START"

[node name="credits_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tr1c5")
text = "CREDITOS"

[node name="quit_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tr1c5")
text = "QUIT GAME"

[node name="jog_btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tr1c5")
text = "   JOGABILIDADE "

[node name="anim" type="AnimationPlayer" parent="MarginContainer"]
root_node = NodePath("../..")
autoplay = "reveal"
libraries = {
"": SubResource("AnimationLibrary_buwmb")
}

[node name="mochi" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("5_wiuwm")
expand_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/jog_btn" to="." method="_on_jog_btn_pressed"]
